--- a/pom.xml
+++ b/pom.xml
@@ -57,4 +57,16 @@
 			</plugin>
 		</plugins>
 	</build>
+<distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>Releases</name>
+      <url>http://f8a5058da57b.ngrok.io/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <name>Snapshot</name>
+      <url>http://f8a5058da57b.ngrok.io/repository/maven-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>	
 </project>
