--- a/pom.xml
+++ b/pom.xml
@@ -61,12 +61,12 @@
     <repository>
       <id>nexus</id>
       <name>Releases</name>
-      <url>http://f8a5058da57b.ngrok.io/repository/maven-releases/</url>
+      <url>http://{publicIP}/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
       <id>nexus</id>
       <name>Snapshot</name>
-      <url>http://f8a5058da57b.ngrok.io/repository/maven-snapshots</url>
+      <url>http://{publicIP}/repository/maven-snapshots</url>
     </snapshotRepository>
   </distributionManagement>	
 </project>
